# solit

./: Info.plist  Makefile  Makefile.mingw  Makefile.osx  Makefile.wince  SDLMain.h  action.h  card.h  deck.cpp  game.cpp  game.h  iconbuild.cpp  kgame.cpp  kgame.h  lowres_renderer.cpp  lowres_renderer.h  main.cpp  make.errs  renderer.cpp  renderer.h  seed.h  sgame.cpp  sgame.h  streamer.h
spidersolit/spidersolit/: spidersolit-Info.plist  spidersolit-Prefix.pch
spidersolit/spidersolit.xcodeproj/: project.pbxproj
spidersolit/spidersolit.xcodeproj/project.xcworkspace/xcshareddata/: spidersolit.xcscmblueprint
trunk/: CMakeLists.txt  Info.plist  Makefile  Makefile.iphone  Makefile.mingw  Makefile.wince  SDLMain.m  action.h  card.cpp  card.h  deck.cpp  deck.h  game.cpp  game.h  iTunesMetadata.plist  iconbuild.cpp  kgame.cpp  kgame.h  lowres_renderer.cpp  lowres_renderer.h  main.cpp  make.errs  renderer.cpp  renderer.h  row.h  serializer.cpp  serializer.h  sgame.cpp  sgame.h  solit.sh  stackable.h  streamer.cpp
trunk/images/: iTunesArtwork
trunk/spidersolit/spidersolit.xcodeproj/: project.pbxproj
trunk/spidersolit/spidersolit.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
trunk/spidersolit/spidersolit.xcodeproj/project.xcworkspace/xcshareddata/: spidersolit.xcscmblueprint
trunk/spidersolit/spidersolit.xcodeproj/project.xcworkspace/xcuserdata/gabry.xcuserdatad/: UserInterfaceState.xcuserstate
trunk/spidersolit/spidersolit.xcodeproj/xcuserdata/gabry.xcuserdatad/xcschemes/: spidersolit.xcscheme  xcschememanagement.plist
(+1 files in other folders)
